--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/express": "^4.17.21",
     "@types/express-useragent": "^1.0.5",
     "@types/helmet": "0.0.35",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "1.7.32",
     "@types/multer": "^1.4.11",
     "@types/redis": "^4.0.10",
